--- a/src/components/Mark.astro
+++ b/src/components/Mark.astro
@@ -1,5 +1,5 @@
 
-<div class="mt-8 bg-white">
+<div class="bg-white">
     <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
     <div
         class="bg-indigo-500 rounded-lg shadow-xl overflow-hidden lg:grid lg:grid-cols-2 lg:gap-4"
