--- a/src/components/TechMarque.astro
+++ b/src/components/TechMarque.astro
@@ -1,13 +1,11 @@
 ---
-import StackIcon from "tech-stack-icons";
+import TechItems from "./TechItems.astro";
 
 type Props = {
   tech: string[];
 };
 
 const { tech } = Astro.props;
-
-const not_supported = ["akka", "typelevel", "kafka", "zio", "keycloak"];
 
 ---
 {tech && (
@@ -20,25 +18,12 @@ const not_supported = ["akka", "typelevel", "kafka", "zio", "keycloak"];
                 Tech & Tools
             </p>
             <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">
-                Technologies we've used
+                Technologies and tools we've used
             </p>
             </div>
         <marquee>
             <div class="flex items-center whitespace-nowrap">
-                {tech.map((t) => (
-                    <span class="p-3 flex flex-col items-center">
-                        {not_supported.includes(t) ? (
-                            <img
-                                src={`/img/tech/${t}.svg`}
-                                alt={t}
-                                class="w-12 h-12 rounded filter grayscale"
-                            />
-                        ) : (
-                            <StackIcon variant="grayscale" className="w-12 h-12 rounded" name={t} />
-                        )}
-                            <span class="mt-1 text-xs font-bold uppercase tracking-tight text-gray-700">{t}</span>
-                        </span>
-                    ))}
+                <TechItems tech={tech}>
             </div>
         </marquee>
     </div>
