Add umami tracking

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -39,4 +39,5 @@ const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
   <meta property="twitter:description" content={description} />
   <meta property="twitter:image" content={new URL(image, Astro.url)} />
   
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="94c15236-d3fd-4e26-a5b1-4f99faed9589"></script>
 </head>
