--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -41,3 +41,7 @@ const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
   
   <script defer src="https://cloud.umami.is/script.js" data-website-id="94c15236-d3fd-4e26-a5b1-4f99faed9589"></script>
 </head>
+
+<style is:global>
+  @import "../styles/global.css";
+</style>
