--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -125,16 +125,18 @@ const tech = [
         />
         <ServiceCard
           title="Audit your tech"
-          description="Have a brief audit on topics like your current test setup, monitoring setup, software architecture or CI/CD pipeline. Next to that we can also consult code reviews or DX research."
-          image="/img/services/backend/still-1.jpeg"
-          link="#"
+          description="Get an independent, expert assessment of your technical systems."
+          image="/img/services/audit/hero.png"
+          link="/services/audit"
+          imageBg="bg-emerald-100"
         />
         <ServiceCard
           title="Venture Development"
           description="End-to-end startup solutions from MVP development to market validation. We help transform your innovative ideas into successful digital products."
           image="/img/services/venture/hero.png"
           link="/services/venture"
-          badge="Hot"
+          badge="New"
+          imageBg="bg-stone-100"
         />
       </div>
     </div>
