Refresh legacy page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,9 +119,10 @@ const tech = [
         <ServiceCard
           title="Legacy deprecation"
           description="Upgrading, refactoring, and integrating legacy systems to ensure long-term maintainability and compatibility."
-          image="/img/services/legacy/still-1.jpeg"
+          image="/img/services/legacy/hero.png"
           link="/services/legacy"
           badge="Popular"
+          imageBg="bg-orange-100"
         />
         <ServiceCard
           title="Audit your tech"
