--- a/src/pages/services/venture.astro
+++ b/src/pages/services/venture.astro
@@ -23,7 +23,7 @@ import LatestProjects from "../../components/LatestProjects.astro";
               <p
                 class="mt-3 max-w-md mx-auto text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl"
               >
-                At Vectos we bring new ideas or ventures to live by building proof of concepts or minimal value products (MVP) with you! Validate, modernize or launch your new product
+                At Vectos we bring new ideas or ventures to live by building proof of concepts or minimal viable products (MVP) with you! Validate, modernize or launch your new product
               </p>
               
             </div>
